// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modal/Modal integration renders correctly 1`] = `
.emotion-8 {
  color: #2c3e53;
  opacity: 1;
  pointer-events: visible;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
}

.emotion-7 {
  background-color: rgba(0,0,0,0.5);
  bottom: 0;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 10001;
}

.emotion-6 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0 0 8px 0 #BEC8D2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  left: 50%;
  height: 300px;
  width: 400px;
  opacity: 1;
  outline: none;
  position: fixed;
  top: 128px;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  z-index: 1001;
  -webkit-animation: none;
  animation: none;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  -webkit-transition-delay: 0.2s;
  transition-delay: 0.2s;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  position: relative;
  min-height: 152px;
}

.emotion-4 {
  border: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-x: auto;
  overflow-y: auto;
  padding: 24px;
}

.emotion-3 {
  font-size: 20px;
  font-weight: 400;
  line-height: 1.66666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid rgba(60,60,60,0.25);
  min-height: 60px;
  z-index: 1002;
}

.emotion-2 {
  margin: 0 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-2 .hig__icon-button.hig__icon-button--primary {
  background: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
  height: calc(20px * 1.66666);
  min-width: 16px;
}

.emotion-2 .hig__icon-button.hig__icon-button--primary svg * {
  fill: #2c3e53;
}

.emotion-2 .hig__icon-button.hig__icon-button--primary:hover,
.emotion-2 .hig__icon-button.hig__icon-button--primary:focus {
  border-color: transparent;
  background-color: transparent;
}

.emotion-2 .hig__icon-button.hig__icon-button--primary:hover svg *,
.emotion-2 .hig__icon-button.hig__icon-button--primary:focus svg * {
  fill: #2c3e53;
}

.emotion-2 .hig__icon-button.hig__icon-button--primary:focus {
  outline: none;
}

.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

.emotion-1 {
  fill: #808080;
}

.emotion-1 > * {
  fill: #808080;
}

<div
  className="emotion-8"
>
  <div
    aria-labelledby="modal-title-1"
    className="emotion-7"
    onClick={[Function]}
    role="dialog"
    tabIndex="-1"
  >
    <article
      className="emotion-6"
      onClick={[Function]}
      role="document"
    >
      <header
        className="emotion-3"
        id="modal-title-1"
      >
        <div
          className="emotion-2"
        >
          <p
            className="emotion-0"
            style={
              Object {
                "fontSize": "20px",
                "fontWeight": 600,
                "lineHeight": "inherit",
              }
            }
          >
            HIG Modal
          </p>
          <button
            className="hig__icon-button hig__icon-button--primary"
            onBlur={undefined}
            onClick={[Function]}
            onFocus={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            title="Close"
          >
            <svg
              className="emotion-1 hig__icon-button__icon"
              height="16px"
              viewBox="0 0 16 16"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                close-m
              </title>
              <path
                d="M14.4 2.4l-.8-.8L8 7.3 2.4 1.6l-.8.8L7.3 8l-5.7 5.6.8.8L8 8.7l5.6 5.7.8-.8L8.7 8l5.7-5.6z"
              />
            </svg>
          </button>
        </div>
      </header>
      <section
        className="emotion-5"
      >
        <div
          className="emotion-4"
        />
      </section>
    </article>
  </div>
</div>
`;

exports[`modal/Modal integration renders with styles customized 1`] = `
.emotion-7 {
  background-color: rgba(0,0,0,0.5);
  bottom: 0;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 10001;
}

.emotion-6 {
  background: #ffffff;
  border-radius: 4px;
  box-shadow: 0 0 8px 0 #BEC8D2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  left: 50%;
  height: 300px;
  width: 400px;
  opacity: 1;
  outline: none;
  position: fixed;
  top: 128px;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  z-index: 1001;
  -webkit-animation: none;
  animation: none;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  -webkit-transition-delay: 0.2s;
  transition-delay: 0.2s;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
  position: relative;
  min-height: 152px;
}

.emotion-4 {
  border: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  overflow-x: auto;
  overflow-y: auto;
  padding: 24px;
}

.emotion-3 {
  font-size: 20px;
  font-weight: 400;
  line-height: 1.66666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-bottom: 1px solid rgba(60,60,60,0.25);
  min-height: 60px;
  z-index: 1002;
}

.emotion-2 {
  margin: 0 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-2 .hig__icon-button.hig__icon-button--primary {
  background: transparent;
  border: none;
  cursor: pointer;
  padding: 0;
  height: calc(20px * 1.66666);
  min-width: 16px;
}

.emotion-2 .hig__icon-button.hig__icon-button--primary svg * {
  fill: #2c3e53;
}

.emotion-2 .hig__icon-button.hig__icon-button--primary:hover,
.emotion-2 .hig__icon-button.hig__icon-button--primary:focus {
  border-color: transparent;
  background-color: transparent;
}

.emotion-2 .hig__icon-button.hig__icon-button--primary:hover svg *,
.emotion-2 .hig__icon-button.hig__icon-button--primary:focus svg * {
  fill: #2c3e53;
}

.emotion-2 .hig__icon-button.hig__icon-button--primary:focus {
  outline: none;
}

.emotion-0 {
  color: #3c3c3c;
  display: block;
  font-family: ArtifaktElement,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.428571429;
  margin: 0;
  text-align: initial;
}

.emotion-1 {
  fill: #808080;
}

.emotion-1 > * {
  fill: #808080;
}

.emotion-8 {
  color: aliceblue;
  opacity: 1;
  pointer-events: visible;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
}

<div
  className="emotion-8"
>
  <div
    aria-labelledby="modal-title-1"
    className="emotion-7"
    onClick={[Function]}
    role="dialog"
    tabIndex="-1"
  >
    <article
      className="emotion-6"
      onClick={[Function]}
      role="document"
    >
      <header
        className="emotion-3"
        id="modal-title-1"
      >
        <div
          className="emotion-2"
        >
          <p
            className="emotion-0"
            style={
              Object {
                "fontSize": "20px",
                "fontWeight": 600,
                "lineHeight": "inherit",
              }
            }
          >
            HIG Modal
          </p>
          <button
            className="hig__icon-button hig__icon-button--primary"
            onBlur={undefined}
            onClick={[Function]}
            onFocus={undefined}
            onMouseEnter={undefined}
            onMouseLeave={undefined}
            title="Close"
          >
            <svg
              className="emotion-1 hig__icon-button__icon"
              height="16px"
              viewBox="0 0 16 16"
              width="16px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                close-m
              </title>
              <path
                d="M14.4 2.4l-.8-.8L8 7.3 2.4 1.6l-.8.8L7.3 8l-5.7 5.6.8.8L8 8.7l5.6 5.7.8-.8L8.7 8l5.7-5.6z"
              />
            </svg>
          </button>
        </div>
      </header>
      <section
        className="emotion-5"
      >
        <div
          className="emotion-4"
        />
      </section>
    </article>
  </div>
</div>
`;
